# agentic-proposal-engine

./: .editorconfig  .env.railway.template  .gitignore  .markdownlint.json  NEXT_STEPS.md  README.md  railway.toml
.cursor/: mcp.json
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_ai_service.py  test_chromadb_hybrid.py  test_domain_filter.py  test_focus_areas.py  test_hf_integration.py  test_projects_api.py
backend/app/: config.py  main.py
backend/app/etl/: __init__.py  domain_filter.py  freelancer_loader.py  hf_loader.py  scheduler.py  source_adapters.py  upload_loader.py
backend/app/models/: ai.py  document.py  draft.py  job.py  keyword.py  project.py  proposal.py  settings.py  strategy.py
backend/app/routers/: analytics.py  draft.py  etl.py  keywords.py  knowledge_base.py  projects.py  proposals.py  settings.py  strategies.py
backend/app/services/: ai_service.py  auto_proposal_service.py  document_service.py  draft_manager.py  email_extraction.py  hf_job_source.py  job_service.py  keyword_service.py  notification_service.py  profile_service.py  project_scoring_service.py  project_service.py  proposal_analytics_service.py  proposal_service.py  session_manager.py  settings_service.py  strategy_service.py  vector_store.py
backend/app/tasks/: autonomous_tasks.py  scoring_tasks.py
backend/scripts/: freelancer_etl.py  hf_etl.py  run_migrations.py  test_resend_email.py
backend/tests/: README.md  conftest.py
backend/tests/integration/: test_hf_job_source.py  test_projects_api.py  test_strategy_focus_areas.py
backend/tests/unit/etl/: __init__.py  test_domain_filter.py
backend/tests/unit/services/: test_ai_service.py  test_email_extraction.py
docs/: HUGGINGFACE_INTEGRATION.md  PROPOSAL_WORKFLOW_INTEGRATION.md  QUICK_START.md  README.md  SCRAPING_STATUS.md  (+34 more)
(+156 files in other folders)
